# sunshine-sdk

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .prettierignore  CMakeLists.txt  Input.h  Makefile  go.mod  go.sum  package.json  parent.go  parent_linux.go  parent_test.go  parent_windows.go  smemory.h
.github/workflows/: CI.yml  ci-windows.yml  ci.yaml  ci.yml  main.yml  ubuntu.yml
ci/: README.md  lib.sh  local.ps1  local.sh
cmake/compile_definitions/: common.cmake  linux.cmake  macos.cmake  windows.cmake
cmake/dependencies/: Boost_Sunshine.cmake  common.cmake  windows.cmake
cmake/macros/: common.cmake
cmake/packaging/: common.cmake  linux.cmake  windows.cmake
cmake/prep/: special_package_configuration.cmake
cmake/targets/: common.cmake  windows.cmake
codec/: codec.go
codec/av1/: av1_packet.go
codec/av1/av1/frame/: av1_test.go
codec/h264/: rtp.go
codec/h265/: avc.go  avcc.go  payloader.go  rtp.go
codec/opus/: opus_packet.go
docker/: ubuntu-22.04 copy.dockerfile  ubuntu-22.04.dockerfile
examples/sunshine/: main.cpp  main.h
examples/tools/: audio.cpp  dxgi.cpp
go/: go.mod  main.go  wgc.cpp  wgc.h
lib/: interprocess.cpp  interprocess.h
scripts/: format.js
server/: go.mod  server.go
src/: audio.cpp  audio.h  cbs.cpp  cbs.h  config.cpp  config.h  confighttp.cpp  dll.cpp  dll.h  file_handler.cpp  file_handler.h  globals.cpp  globals.h  input.cpp  input.h  interprocess.cpp  interprocess.h  ivshmem_protocol.h  logging.cpp  logging.h  main.cpp  main.h  move_by_copy.h  nvhttp.cpp  output_debug.cpp  output_debug.h  parent.cpp  process.cpp  rtsp.cpp  rtsp.h  smemory.h  stream.cpp  stream.h  sync.h  thread_safe.h  utility.h  uuid.h  video.cpp  video.h  video_colorspace.cpp  (+1 more)
src/nvenc/: nvenc_base.cpp  nvenc_base.h  nvenc_colorspace.h  nvenc_config.h  nvenc_d3d11.cpp  nvenc_d3d11.h  nvenc_encoded_frame.h  nvenc_utils.cpp  nvenc_utils.h
src/platform/: common.h
src/platform/linux/: cuda.cpp  cuda.h  graphics.cpp  graphics.h  kmsgrab.cpp  misc.cpp  misc.h  vaapi.cpp  vaapi.h  wayland.cpp  wayland.h  wlgrab.cpp  x11grab.cpp  x11grab.h
src/platform/macos/: display.mm  misc.mm
src/platform/windows/: PolicyConfig.h  audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  display_wgc.cpp  keylayout.h  misc.cpp  misc.h  windows.rs.in
src/platform/windows/nvprefs/: nvprefs_common.cpp  nvprefs_interface.cpp
sunshine/header/audio/: audio.h
sunshine/header/http/: confighttp.h  crypto.h  httpcommon.h  network.h  nvhttp.h
sunshine/header/input/: input.h
sunshine/header/rstp/: rtsp.h  stream.h
sunshine/header/thread/: task_pool.h  thread_pool.h  thread_safe.h
sunshine/header/util/: current_process.h  upnp.h
sunshine/header/video/: cbs.h  video_sdk.h
sunshine/platform/: common.h
sunshine/platform/linux/: audio.cpp  vaapi.cpp  x11grab.cpp
sunshine/platform/macos/: display.mm  input.cpp  microphone.mm  misc.cpp  nv12_zero_device.cpp  publish.cpp
sunshine/platform/windows/: audio.cpp  display.h  display_base.cpp  display_ram.cpp  display_vram.cpp  input.cpp  misc.cpp  publish.cpp
sunshine/src/audio/: audio.cpp
sunshine/src/config/: config.cpp
sunshine/src/http/: confighttp.cpp  crypto.cpp  httpcommon.cpp  network.cpp  nvhttp.cpp
sunshine/src/input/: input.cpp
sunshine/src/rstp/: rtsp.cpp  stream.cpp
sunshine/src/util/: process.cpp  upnp.cpp
sunshine/src/video/: cbs.cpp  video.cpp
tests/: CMakeLists.txt
tests/standalone/: CMakeLists.txt
tests/unit/: test_ivshmem_protocol.cpp
tools/: CMakeLists.txt
